# pokeapi

./: .env.example  README.md  docker-compose.yml  pyproject.toml
apps/pokeapi/: .gitignore  Dockerfile  pyproject.toml  requirements.dev.txt  requirements.txt
apps/pokeapi/src/config/: .secrets.example  .secrets.example.toml  settings.local.toml.bak  settings.toml
apps/pokeapi/src/core/: __init__.py  constants.py
apps/pokeapi/src/core/conf/: __init__.py  config.py
apps/pokeapi/src/domain/: __init__.py
apps/pokeapi/src/domain/api/responses/: schemas.py
apps/pokeapi/src/domain/enums/: __init__.py
apps/pokeapi/src/domain/enums/celery_enums/: enums.py
apps/pokeapi/src/pokeapi/: celery_tasks.py  celeryapp.py  celeryconfig.py  celeryconfig.py.bak  dependencies.py  main.py  monitor.py  refresh_caches.py  test.py  test.py.bak
apps/pokeapi/src/pokeapi/celery_tasks/: __init__.py  refresh_tasks.py
apps/pokeapi/src/pokeapi/core/conf/: __init__.py  config.py
apps/pokeapi/src/pokeapi/domain/: __init__.py
apps/pokeapi/src/pokeapi/domain/api/responses/: __init__.py
apps/pokeapi/src/pokeapi/domain/enums/celery_enums/: __init__.py
apps/pokeapi/src/pokeapi/utils/: __init__.py
apps/pokeapi/src/pokeapi/utils/path_utils/: __init__.py
apps/pokeapi/src/pokeapi/utils/pokemon_utils/: __init__.py  operations.py
apps/pokeapi/src/pokeapi/utils/serialize_utils/: __init__.py  schemas.py
containers/rabbitmq/: .env  .env.example  docker-compose.yml
containers/rabbitmq_redis/: .env.example  docker-compose.yml  prometheus.yml
containers/rabbitmq_redis/grafana/dashboards/: rabbitmq_monitoring2.json  rabbitmq_queue.json
containers/rabbitmq_redis/provision/grafana/dashboards/: rabbitmq_monitoring.json
containers/rabbitmq_redis/provision/grafana/provisioning/datasources/: auto.yml
containers/rabbitmq_redis/provision/prometheus/: datasources.yml
containers/redis/: .env  .env.example  docker-compose.yml
src/: config.py
src/.data/: list_all_pokemon.txt
src/config/: settings.local.toml
src/pokeapi/: __main__.py  dependencies.py  main.py  monitor.py  test.py
src/pokeapi/core/conf/: __init__.py  config.py
src/pokeapi/domain/api/: __init__.py
src/pokeapi/domain/api/responses/: __init__.py  schemas.py
src/pokeapi/domain/pokemon/: __init__.py  names.py
src/pokeapi/utils/: __init__.py
src/pokeapi/utils/path_utils/: __init__.py  operations.py
src/pokeapi/utils/pokemon_utils/: __init__.py  operations.py
