[project]
name = ""
version = ""
description = ""
authors = [{ name = "redjax", email = "none@none.com" }]
dependencies = [
    "red-utils>=0.2.7",
    "dynaconf>=3.2.4",
    "pydantic>=2.4.2",
    "pydantic-settings>=2.0.3",
    "httpx>=0.25.1",
    "loguru>=0.7.2",
    "sqlalchemy>=2.0.23",
    "anyio>=4.0.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

[tool.pdm.dev-dependencies]
dev = ["black>=23.10.1", "ruff>=0.1.3", "pytest>=7.4.3"]

[tool.pdm.scripts]

lint = { shell = "pdm run ruff check . --fix && pdm run black ." }
