[project]
name = ""
version = ""
description = ""
authors = [{ name = "redjax", email = "none@none.com" }]
dependencies = [
    "red-utils>=0.2.7",
    "dynaconf>=3.2.4",
    "pydantic>=2.4.2",
    "pydantic-settings>=2.0.3",
    "httpx>=0.25.1",
    "loguru>=0.7.2",
    "sqlalchemy>=2.0.23",
    "anyio>=4.0.0",
    "celery>=5.3.5",
    "redis>=5.0.1",
]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

[tool.pdm.dev-dependencies]
dev = ["black>=23.10.1", "ruff>=0.1.3", "pytest>=7.4.3"]

[tool.pdm.scripts]

lint = { shell = "pdm run ruff check . --fix && pdm run black ." }

#################
# Start Scripts #
#################

start-cache-refresh = { shell = "cd src && pdm run celery -A pokeapi.celeryapp worker --loglevel=info", env = { ENV_FOR_DYNACONF = "prod" } }
start-cache-refresh-dev = { shell = "cd src && pdm run celery -A pokeapi.celeryapp worker --loglevel=debug", env = { ENV_FOR_DYNACONF = "dev" } }

######################
# Export Requirement #
######################

#  Export production requirements
export = { cmd = "pdm export --prod -o requirements.txt --without-hashes" }
#  Export only development requirements
export-dev = { cmd = "pdm export -d -o requirements.dev.txt --without-hashes" }
## Uncomment if/when using a CI group
# export-ci = {cmd = "pdm export -G ci -o requirements.ci.txt --without-hashes"}
